# agent-agentic-context-engineering

./: .env.template  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/skills/finance-formula/: SKILL.md
eval/: finance.py  run_finance.py
src/: agents.py  models.py  orchestrator.py  playbook.py
src/prompts/: __init__.py  curator.py  generator.py  reflector.py
